--- a/src/main/resources/templates/shared_file.html
+++ b/src/main/resources/templates/shared_file.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-[var(--color-bg)] text-[var(--color-text)] font-sans min-h-screen flex justify-center items-start pt-20">
 
-<div class="container bg-[var(--color-bg-alt)]/90 p-10 rounded-2xl shadow-[0_0_20px_rgba(178,89,255,0.4)] w-[90%] max-w-3xl text-center animate-fadeIn">
+<div class="container bg-[var(--color-bg-alt)]/90 p-10 rounded-2xl shadow-[0_0_20px_rgba(178,89,255,0.4)] w-[90%] max-w-[80vw] text-center animate-fadeIn">
 
     <h1 class="text-4xl md:text-3xl sm:text-2xl font-extrabold mb-5 bg-clip-text text-transparent bg-gradient-to-r from-[#b983ff] to-[#d3bfff]">
         Shared File
