--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -58,7 +58,7 @@
     </div>
 </nav>
 
-<div class="content px-4 py-8 max-w-[75rem] mx-auto">
+<div class="content px-4 py-8 max-w-[80vw] mx-auto">
 
     <h1 class="text-center text-3xl font-bold mb-6" th:text="'Kalender - ' + ${monthName} + ' ' + ${year}">Calendar</h1>
 
