--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -57,7 +57,7 @@
     </div>
 </nav>
 
-<div class="content px-6 py-8 max-w-[75rem] mx-auto flex flex-col gap-12">
+<div class="content px-6 py-8 max-w-[80vw] mx-auto flex flex-col gap-12">
 
     <div class="flex flex-col md:flex-row justify-between items-end mb-4 gap-4">
         <!-- Folder Selection -->
