--- a/src/main/resources/templates/user-settings.html
+++ b/src/main/resources/templates/user-settings.html
@@ -57,7 +57,7 @@
     </div>
 </nav>
 
-<div class="content px-6 py-8 max-w-4xl mx-auto mt-28">
+<div class="content px-6 py-8 max-w-[80vw] mx-auto mt-28">
 
     <h1 class="text-center text-3xl font-bold mb-6">User Settings</h1>
 
